# indexify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  vscode.yml
core/: Cargo.toml
core/src/: encoding.rs  lib.rs  main.rs  store.rs  watcher.rs
core/src/cmd/: build.rs  init.rs  mcp.rs  mod.rs  search.rs  serve.rs  status.rs  sync.rs
core/src/index/: builder.rs  mod.rs  schema.rs  searcher.rs
core/tests/: cli.rs  search_e2e.rs
core/tests/common/: mod.rs
skills/loupe/: SKILL.md
vscode/: .vscode-test.mjs  .vscodeignore  README.md  esbuild.js  esbuild.test.js  package-lock.json  package.json  tsconfig.json
vscode/media/: searchView.css  searchView.js
vscode/src/: config.ts  extension.ts  openMatch.ts  search.ts  searchView.ts  sidecarClient.ts
vscode/src/test/: config.test.ts  extension.test.ts  realbinary.test.ts  sidecar.test.ts
web/: changelog.md  index.md  package-lock.json  package.json
web/.vitepress/: config.ts
web/guide/: getting-started.md  how-it-works.md
web/reference/: cli.md  configuration.md  mcp-server.md  vscode.md
